Make sure stylus tools are always hidden if disabled by the user.

BUG=666450

Review-Url: https://codereview.chromium.org/2535773004
Cr-Commit-Position: refs/heads/master@{#434717}

Former-commit-id: 04d83e71145866d8d7cea925f4ff2c57c0c9bd03